--- a/src/app/roomtype/room/room.component.html
+++ b/src/app/roomtype/room/room.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar>
         <h4><b>Rooms Overview</b></h4>
     <span class="example-spacer"></span>
-        <mat-icon (click)="open(addRoomModal)" (click)="clearModalData()" >add</mat-icon>
+        <mat-icon (click)="open(addRoomModal)" (click)="setId()" (click)="clearModalData()" >add</mat-icon>
     </mat-toolbar>
 </p>
       
@@ -34,11 +34,7 @@
             </span>
           </div> 
           <div class="form-group mb-3">
-            <label>Room Type  Number :</label>
-            <input type="text" class="form-control" formControlName="RoomTypeId" >
-            <span class="error" *ngIf="validation.RoomTypeId.invalid && validation.RoomTypeId.touched" >
-              <small>Room Type Number is required!</small>
-            </span>
+            <input type="hidden" class="form-control" [(ngModel)]="ID" formControlName="RoomTypeId" >
           </div> 
           <div class="form-check">
             <input class="form-check-input" type="checkbox" formControlName="IsActive">
@@ -64,7 +60,6 @@
           <th scope="col">Room No</th>
           <th scope="col">Price</th>
           <th scope="col">Room Status</th>
-          <th scope="col">Room Type</th>
           <th scope="col">Action</th>
         </tr>
       </thead>
@@ -75,7 +70,6 @@
             <td data-label="Room No" > <span>{{ room.RoomNo }}</span></td>
             <td data-label="Price" ><span>{{ room.Price }}</span></td>
             <td data-label="Room Status"><span>{{ room.RoomStatus}}</span></td>
-            <td data-label="Room Type Id"><span>{{ room.RoomTypeId}}</span></td>
             <td data-label="Action"><span>
               <mat-icon (click)="open(updateRoomModal)" style="color: #000;">edit</mat-icon>
 
