--- a/src/styles.css
+++ b/src/styles.css
@@ -150,3 +150,19 @@ form label {
 .modal-title {
   text-align: center;
 }
+.paginator {
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+  margin-right: 0;
+  margin-left:auto;
+  float:right;
+  color: #6C6969;
+  font-weight: bold;
+  text-decoration: none;
+}
+.paginator .ngx-pagination .current {
+  background: rgb(255, 100, 0);
+  border-radius: 4px;
+  padding-left: 9px;
+  padding-right: 9px;
+}
