--- a/src/app/guest/guest.component.html
+++ b/src/app/guest/guest.component.html
@@ -12,14 +12,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link deactive" routerLink="/reservation">Reservation</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link active" routerLink="/guest" >Guest</a>
         </li>
         <li class="nav-item">
             <a class="nav-link deactive" aria-current="page" routerLink="/roomtype" >Room</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link deactive" routerLink="/dashboard" >Dash-Board</a>
+      </li>
       </ul>
       <img src="assets/img/f.jpg" alt="Avatar" >
     </div>      
@@ -61,41 +61,41 @@
     <form [formGroup]="Guestform">
       <div class="form-group mb-3">
         <label>Full Name :</label>
-        <input type="text" class="form-control" formControlName="Name">
-        <span class="error" *ngIf="validation.Name.invalid && validation.Name.touched" >
+        <input type="text" class="form-control" formControlName="name">
+        <span class="error" *ngIf="validation.name.invalid && validation.name.touched" >
           <small>  Name is required!</small>
         </span>
       </div>
       <div class="form-group mb-3 form-row">
         <label >Phone Number :</label>
-        <input type="text" class="form-control" formControlName="PhoneNo">
-        <span class="error" *ngIf="validation.PhoneNo.invalid && validation.PhoneNo.touched" >
+        <input type="text" class="form-control" formControlName="phoneNo">
+        <span class="error" *ngIf="validation.phoneNo.invalid && validation.phoneNo.touched" >
           <small>Number is required! (max length 10)</small> 
         </span>
       </div>
       <div class="form-group mb-3 form-row middle">
         <label>Date of Birth :</label>
-        <input type="date" class="form-control" formControlName="DateOfBirth" >
-        <span class="error" *ngIf="validation.DateOfBirth.invalid && validation.DateOfBirth.touched" >
+        <input type="date" class="form-control" formControlName="dateOfBirth" >
+        <span class="error" *ngIf="validation.dateOfBirth.invalid && validation.dateOfBirth.touched" >
           <small>Date Of Birth is required!</small>
         </span>
       </div>
       <div class="form-group mb-3 form-row">
         <label>ID Number :</label>
-        <input type="text" class="form-control" formControlName="IdNo">
-        <span class="error" *ngIf="validation.IdNo.invalid && validation.IdNo.touched" >
+        <input type="text" class="form-control" formControlName="idNo">
+        <span class="error" *ngIf="validation.idNo.invalid && validation.idNo.touched" >
           <small>ID is required! (max length 10)</small> 
         </span>
       </div>
       <div class="form-group mb-3 form-row middle" >
         <label>Email :</label>
-        <input type="email" class="form-control" formControlName="Email">
-        <span class="error" *ngIf="validation.Email.invalid && validation.Email.touched" >
+        <input type="email" class="form-control" formControlName="email">
+        <span class="error" *ngIf="validation.email.invalid && validation.email.touched" >
           <small>Valid Email is required!</small> 
         </span>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" formControlName="IsActive">
+        <input class="form-check-input" type="checkbox" formControlName="isActive">
         <label class="form-check-label" for="gridCheck">
           Is active?
         </label>
@@ -126,12 +126,12 @@
   
       <tbody>
         <tr *ngFor = "let guest of guests | filter:searchText | paginate: {itemsPerPage : 5, currentPage:page};" >
-          <td data-label="Status" > <mat-icon [ngStyle]="{'color': guest.IsActive? '#143E18' : '#6B1111'}">lens</mat-icon></td>
-          <td data-label="Name" > <span>{{ guest.Name }}</span></td>
-          <td data-label="Phone Number" ><span>{{ guest.PhoneNo }}</span></td>
-          <td data-label="Date of Birth" ><span>{{ guest.DateOfBirth | date: 'dd/MMM/yy'}}</span></td>
-          <td data-label="ID Number" ><span>{{ guest.IdNo }}</span></td>
-          <td data-label="Email" ><span>{{ guest.Email }}</span></td>
+          <td data-label="Status" > <mat-icon [ngStyle]="{'color': guest.isActive? '#143E18' : '#6B1111'}">lens</mat-icon></td>
+          <td data-label="Name" > <span>{{ guest.name }}</span></td>
+          <td data-label="Phone Number" ><span>{{ guest.phoneNo }}</span></td>
+          <td data-label="Date of Birth" ><span>{{ guest.dateOfBirth | date: 'dd/MMM/yy'}}</span></td>
+          <td data-label="ID Number" ><span>{{ guest.idNo }}</span></td>
+          <td data-label="Email" ><span>{{ guest.email }}</span></td>
           <td data-label="Action" ><span>
             <mat-icon (click)="open(updateGuestModal)" style="color: #000;">edit</mat-icon>
 
@@ -145,47 +145,50 @@
               <div class="modal-body">
                 <h1 class="modal-title" id="staticBackdropLabel"><b>Guest Details</b></h1><br>
                 <form [formGroup]="Guestform">
-                  <div class="form-group mb-3">
-                    <label>Full Name :</label>
-                    <input type="text" required  [(ngModel)]="guest.Name" class="form-control" id="inputName" formControlName="Name">
-                    <span class="error" *ngIf="validation.Name.invalid && validation.Name.touched" >
-                      <small>  Name is required!</small>
-                    </span>
-                  </div>
-                  <div class="form-group mb-3 form-row">
-                    <label>Phone Number :</label>
-                    <input type="text" [(ngModel)]="guest.PhoneNo" class="form-control" id="inputPhoneNumber" formControlName="PhoneNo">
-                    <span class="error" *ngIf="validation.PhoneNo.invalid && validation.PhoneNo.touched" >
-                      <small>Number is required! (max length 10)</small> 
-                    </span>
-                  </div>
-                  <div class="form-group mb-3 form-row middle">
-                    <label>Date of Birth :</label>
-                    <input type="date" class="form-control" [(ngModel)]="guest.DateOfBirth" id="inputDoB" formControlName="DateOfBirth" >
-                    <span class="error" *ngIf="validation.DateOfBirth.invalid && validation.DateOfBirth.touched" >
-                      <small>Date Of Birth is required!</small>
-                    </span>
-                  </div>
-                  <div class="form-group mb-3 form-row">
-                    <label>ID Number :</label>
-                    <input type="text" class="form-control" id="inputIDNumber" [(ngModel)]="guest.IdNo" formControlName="IdNo">
-                    <span class="error" *ngIf="validation.IdNo.invalid && validation.IdNo.touched" >
-                      <small>ID is required! (max length 10)</small> 
-                    </span>
-                  </div>
-                  <div class="form-group mb-3 form-row middle" >
-                    <label>Email :</label>
-                    <input type="email" class="form-control" id="inputEmail" [(ngModel)]="guest.Email" formControlName="Email">
-                    <span class="error" *ngIf="validation.Email.invalid && validation.Email.touched" >
-                      <small>Valid Email is required!</small> 
-                    </span>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck" [(ngModel)]="guest.IsActive" formControlName="IsActive">
+                  <div class="form-check form-row left">
+                    <input class="form-check-input" type="checkbox" id="gridCheck" [(ngModel)]="guest.isActive" formControlName="isActive">
                     <label class="form-check-label" for="gridCheck">
                       Is active?
                     </label>
                   </div>
+
+                  <div class="form-group mb-3">
+                    <label>Full Name :</label>
+                    <input type="text" required  [(ngModel)]="guest.name" class="form-control" id="inputName" formControlName="name">
+                    <span class="error" *ngIf="validation.name.invalid && validation.name.touched" >
+                      <small>  Name is required!</small>
+                    </span>
+                  </div>
+                  
+                  <div class="form-group mb-3 form-row" >
+                    <label>Email :</label>
+                    <input type="text" class="form-control" id="inputIDNumber" [(ngModel)]="guest.email" formControlName="email">
+                    <span class="error" *ngIf="validation.email.invalid && validation.email.touched" >
+                      <small>Valid Email is required!</small> 
+                    </span>
+                  </div>
+                  <div class="form-group mb-3 form-row middle">
+                    <label>Phone Number :</label>
+                    <input type="text" [(ngModel)]="guest.phoneNo" class="form-control" id="inputPhoneNumber" formControlName="phoneNo">
+                    <span class="error" *ngIf="validation.phoneNo.invalid && validation.phoneNo.touched" >
+                      <small>Number is required! (max length 10)</small> 
+                    </span>
+                  </div>
+                  <div class="form-group mb-3 form-row">
+                    <label>Date of Birth :</label>
+                    <input type="date" class="form-control" [(ngModel)]="guest.dateOfBirth" id="inputDoB" formControlName="dateOfBirth" >
+                    <span class="error" *ngIf="validation.dateOfBirth.invalid && validation.dateOfBirth.touched" >
+                      <small>Date Of Birth is required!</small>
+                    </span>
+                  </div>
+                  <div class="form-group mb-3 form-row middle">
+                    <label>ID Number :</label>
+                    <input type="text" class="form-control" id="inputIDNumber" [(ngModel)]="guest.idNo" formControlName="idNo">
+                    <span class="error" *ngIf="validation.IdNo.invalid && validation.idNo.touched" >
+                      <small>ID is required! (max length 10)</small> 
+                    </span>
+                  </div>
+                  
                   <br>
                 </form>
               </div>
