--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
                     <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                 </div>
                 <br>
-                <button type="submit" class="btn btn-primary submit" (click)="login()" routerLink="/reservation">Login</button>
+                <button type="submit" class="btn btn-primary submit" (click)="login()" routerLink="/dashboard">Login</button>
                 <br><br>
             </form>
         </div>
