--- a/src/app/roomtype/roomtype.component.html
+++ b/src/app/roomtype/roomtype.component.html
@@ -11,15 +11,15 @@
       
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-">
-            <a class="nav-link deactive" routerLink="/reservation">Reservation</a>
-          </li>
           <li class="nav-item">
             <a class="nav-link deactive" routerLink="/guest">Guest</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/roomtype">Room</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link deactive" routerLink="/dashboard" >Dash-Board</a>
+        </li>
         </ul>
           <img src="assets/img/f.jpg" alt="Avatar" >
       </div>      
@@ -60,15 +60,15 @@
           <form [formGroup]="Roomtypeform">
             <div class="form-group mb-3">
               <label>Room Type Name:</label>
-              <input type="text" class="form-control" formControlName="Name">
-              <span class="error" *ngIf="validation.Name.invalid && validation.Name.touched" >
+              <input type="text" class="form-control" formControlName="name">
+              <span class="error" *ngIf="validation.name.invalid && validation.name.touched" >
                 <small>  Room Type Name is required!</small>
               </span>
             </div>
             <div class="form-group mb-3">
               <label >Code :</label>
-              <input type="text" class="form-control" formControlName="Code">
-              <span class="error" *ngIf="validation.Code.invalid && validation.Code.touched" >
+              <input type="text" class="form-control" formControlName="code">
+              <span class="error" *ngIf="validation.code.invalid && validation.code.touched" >
                 <small>Code is required!</small> 
               </span>
             </div> 
@@ -82,7 +82,7 @@
 
       <!-- room type display-->     
       <div *ngFor = "let roomtype of roomtypes">
-        <button class="btn roomtypebtn" (click)="getId(roomtype.id)" (click)="getName(roomtype.Name)" [ngClass]="{'click': roomtype.id == RoomTypeID}"   ><b>{{roomtype.Name}}</b>
+        <button class="btn roomtypebtn" (click)="getId(roomtype.id)" (click)="getName(roomtype.name)" [ngClass]="{'click': roomtype.id == RoomTypeID}"   ><b>{{roomtype.name}}</b>
           <mat-icon  [matMenuTriggerFor]="menu" id="icon">more_vert</mat-icon>
           <mat-menu #menu="matMenu">
             <label mat-menu-item (click)="open(updateRoomTypeModal)">Edit</label>
@@ -93,15 +93,15 @@
                 <form [formGroup]="Roomtypeform">
                   <div class="form-group mb-3">
                     <label>Room Type Name:</label>
-                    <input type="text" class="form-control" [(ngModel)]="roomtype.Name" formControlName="Name">
-                    <span class="error" *ngIf="validation.Name.invalid && validation.Name.touched" >
+                    <input type="text" class="form-control" [(ngModel)]="roomtype.name" formControlName="name">
+                    <span class="error" *ngIf="validation.name.invalid && validation.name.touched" >
                       <small>  Room Type Name is required!</small>
                     </span>
                   </div>
                   <div class="form-group mb-3">
                     <label >Code :</label>
-                    <input type="text" class="form-control" [(ngModel)]="roomtype.Code"  formControlName="Code">
-                    <span class="error" *ngIf="validation.Code.invalid && validation.Code.touched" >
+                    <input type="text" class="form-control" [(ngModel)]="roomtype.code"  formControlName="code">
+                    <span class="error" *ngIf="validation.code.invalid && validation.code.touched" >
                       <small>Code is required!</small> 
                     </span>
                   </div>
